# DetectionSystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  motion_detection.cpp
include/: area.hpp  face.hpp
src/: area.cpp  face.cpp  main.cpp
